--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week15-2025",
+  "name": "blog-database-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.3",
+    "@prisma/client": "^6.18.0",
+    "bootstrap": "^5.3.8",
+    "dotenv": "^17.2.3",
+    "next": "16.0.1",
+    "prisma": "^6.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -18,7 +22,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "16.0.1",
     "typescript": "^5"
   }
 }
